--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 # Add files and directories you 
-Kayanja john/node-modules
+Refactory-Catalyst012-Final-Technical-Assessment/kayanja john/node_modules
